new branch with authentication but authenticatio doesn't work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.application.name=PayMyBuddy
 #Tomcat configuration
 server.port=9090
 
+#Security/JWT
+security.jwt.secret = mySecret
+security.jwt.header= Authorization
+security.jwt.header-prefix= Bearer
+security.jwt.expiration= 864000000
 
 #Datasource configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/PayMyBuddyDB
@@ -29,3 +34,6 @@ spring.mail.properties.mail.smtp.port=1025
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+
+
