Add Tests for ExternalTransactionServiceTest, ContactServiceTest etc.

--- a/src/test/resources_test/application.properties
+++ b/src/test/resources_test/application.properties
@@ -3,7 +3,7 @@
 server.port=9091
 
 #Datasource configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/PayMyBuddyTest
+spring.datasource.url=jdbc:postgresql://localhost:5432/PayMyBuddyDBTest
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
