Add Tests for InternalTransactionService

--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.5</version>
                 <configuration>
+                    <excludes>
+                        <exclude>com/project/paymybuddy/DAO/**/*</exclude>
+                        <exclude>com/project/paymybuddy/Domain/DTO/**/*</exclude>
+                        <exclude>com/project/paymybuddy/Registration/UserDTO</exclude>
+
+                    </excludes>
 
                 </configuration>
                 <executions>
