--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
                         <exclude>com/project/paymybuddy/DAO/**/*</exclude>
                         <exclude>com/project/paymybuddy/Domain/DTO/**/*</exclude>
                         <exclude>com/project/paymybuddy/Registration/UserDTO</exclude>
+                        <exclude>com/project/paymybuddy/Security/filter/**</exclude>
 
                     </excludes>
 
